<resources>
    <string name="app_name">Traffic Teacher</string>
    <string name="title_activity_show_traffic_map">Map</string>
    <string name="fine1">
      <font fgcolor="#FF9800">ধারা ১৩৭</font>
        \nসাধারন জরিমানা –২০০ টাকা
    </string>
    <string name="fine2">
     <font fgcolor="#FF9800">ধারা ১৩৯</font>
        \nহাইড্রেোলিক হর্ন বাজালে–১০০ টাকা
    </string>
    <string name="fine3">
        <font fgcolor="#FF9800">ধারা ১৪০ </font>
        \nপুলিশের আদেশ অমান্য এবং অসহযোগিতা করলে–৫০০টাকা(বিশেষ জরিমানা)

    </string>
    <string name="fine4">
        <font fgcolor="#FF9800">ধারা ১৪০ </font>
        \n লাল সিগনাল অমান্য করলে–৫০০ টাকা(বিশেষ জরিমানা)

    </string>
    <string name="fine5">
        <font fgcolor="#FF9800">ধারা ১৪২</font>
        \nনিয়ন্ত্রনহীন গাড়ি চালালে–৩০০টাকা
    </string>
    <string name="fine6">
        <font fgcolor="#FF9800">ধারা ১৪৬</font>
        \nদূর্ঘটনা সম্পকিত জরিমানা–৫০০টাকা
    </string>
    <string name="fine7">
        <font fgcolor="#FF9800">ধারা ১৪৯</font>
        \nঅনিরাপদভাবে গাড়ি চালালে–৩০০ টাকা
    </string>
    <string name="fine8">
        <font fgcolor="#FF9800">ধারা ১৫০</font>
        \nযানবাহন থেকে কালো ধোয়া বেরুলে–২০০ টাকা

    </string>
    <string name="fine9">
        <font fgcolor="#FF9800">ধারা ১৫১</font>
        \nঅনুমতি ছাড়া গাড়ি বিক্রয় এবং সংশোধন করলে–১২৫০ টাকা

    </string>
    <string name="fine10">
        <font fgcolor="#FF9800"> ধারা ১৫২ </font>
        \nরেজিস্টেশনবিহীন,ফিটনেসহিন,অথবা রূট পারমিট ছাড়া গাড়ী চালালে–৭০০ টাকা
    </string>
    <string name="fine11">
        <font fgcolor="#FF9800">ধারা ১৫৪</font>
        \nগাড়িতে অতিরিক্ত উজন বহন করলে–৫০০টাকা
    </string>
    <string name="fine12">
        <font fgcolor="#FF9800">ধারা ১৫৫</font>
        \nইন্সুরেন্সবিহীন গাড়ি চালালে–৫০০টাকা
    </string>
    <string name="fine13">
        <font fgcolor="#FF9800">ধারা ১৫৬</font>
        \nঅনুমতি ছাড়া গাড়ি চালালে–৫০০টাকা
    </string>
    <string name="fine14">
        <font fgcolor="#FF9800">ধারা ১৫৭</font>
        \nরাস্তা বা পাবলিক স্থান ব্লক করে রাখলে–২৫০টাকা

    </string>
    <string name="fine15">
        <font fgcolor="#FF9800">ধারা ১৫৮</font>
        \nঅনধিকার ভাবে গাড়ি ব্যবহার করলে–২৫০টাকা
    </string>
    <string name="fine16">
        <font fgcolor="#FF9800">ধারা  ০০০</font>
        \nলেনের নিয়মনীতি ভঙ্গন করলে–১,০০০টাকা
    </string>
    <string name="dhara1">
        <font fgcolor="#FF9800">ধারা-১৩৭</font>
        \nমোতাবেক যদি কোন ব্যক্তি ড্রাইভিং লাইসেন্স ছাড়া গাড়ী চালায়,গাড়ীতে মেটালিক নাম্বার প্লেট ব্যবহার করে,ট্যাক্স টোকেনের মেয়াদ উত্তীর্ণ হয়,নাম্বার প্লেট অস্পষ্ট,বাম্পার দ্বারা নাম্বার প্লেট আবৃত থাকেএবং রং পার্কিং করে; তাহলে উক্ত দ্বারা মোতাবেক ড্রাইভার বা মালিকের ২০০/-টাকা জরিমানা হবে।
    </string>
    <string name="dhara2">

        <font fgcolor="#FF9800">ধারা-১৩৯</font>
        \nএ ধারায় বলা হয়েছে যে, কোন গাড়ীতে হাইড্রোলিক হর্ণ সংযোজিত পাওয়া গেল-উক্ত দ্বারা মোতাবেক ১০০/-টাকা জরিমানা করা হবে।
    </string>
    <string name="dhara3">
        <font fgcolor="#FF9800">ধারা-১৪০</font>
        \nএ ধারায় বলা হয়েছে যে,নিষিদ্ধ স্থানে হর্ণ বাজাইলে,ট্রাফিক নির্দেশাবলী অমান্য করিলে,বাঁধা সৃষ্টি ও তথ্য প্রদানে অস্বীকৃতি জানাইলে,ট্রাফিক সংকেত অমান্য করিলে, ওয়ান-ওয়ে অমান্য করিলে,নিষিদ্ধ ইউটার্ণ করিলে,নিষিদ্ধ সময়ে যানবাহন চলাচল করিলে-উক্ত দ্বারা মোতাবেক ২৫০/-টাকা জরিমানা করা হবে।
    </string>
    <string name="dhara4">
        <font fgcolor="#FF9800">ধারা-১৪২</font>
        \nএ ধারায় বলা হয়েছে আইনানুগ সর্ব্বোচ্চ গতিসীমা লংগন করিলে-জরিমানা হবে ৩০০/-টাকা মাত্র ।
    </string>
    <string name="dhara5">
        <font fgcolor="#FF9800">ধারা-১৪৬</font>
        \nএ ধারায় বলা হয়েছে যে, দূর্ঘটনা সংক্রান্ত অপরাধ করিলে-জরিমানা হবে ৫০০/-টাকা মাত্র
    </string>
    <string name="dhara6">
        <font fgcolor="#FF9800">ধারা-১৪৯</font>
        \nএ ধারায় বলা হয়েছে যে,যানবাহনের হেড লাইট,ব্যাক লাইট,ইন্ডিকেটর, ব্রেক লাইট,লুকিং গ্লাস,রিয়ার মিরর (পেছনে দেখার আয়না),ওয়াইপার না থাকিলে বা ক্রটিযুক্ত থাকিলে,যানবাহলে আনসেইফ লোডিং থাকিলে,মটর সাইকেলে ২ জনের অধিক আরহন করিলে,চালকের পাশে বা ছাদে অতিরিক্ত যাত্রী বহন করিলে,হেলমেট ব্যবহার না করিলে-জরিমানা হবে ৩০০/-টাকা মাত্র ।
    </string>
    <string name="dhara7">
        <font fgcolor="#FF9800">ধারা-১৫০</font>
        \nযে সকল যানবাহন হইতে স্বাস্থের জন্য ক্ষতিকর এমন ধোয়া বাহির হইলে-জরিমানা হবে ২০০/-টাকা মাত্র ।
    </string>
    <string name="dhara8">
        <font fgcolor="#FF9800">ধারা-১৫১</font>
        \nঅস্বচ্ছ, রঙ্গীন, কালো গ্লাস ব্যবহার করিলে,ট্রিনটেড পেপার ব্যবহার করিলে,ফিটনেস সার্টিফিকেটের সহিত গাড়ীর রংয়ের মিল না থাকিলে, গাড়ীর টায়ার পরিবর্তন করিলে,সরকার নির্ধারিত রং ব্যতিত অন্যকোন রং ব্যবহার করিলে,বিআরটিএর অনুমতি ছাড়া গাড়ীর রং পরিবর্তন করিলে ও মালিকানা পরিবর্তন না করিলে-জরিমানা হবে ১,২৫০/-টাকা মাত্র ।
    </string>
    <string name="dhara9">
        <font fgcolor="#FF9800"> ধারা-১৫২</font> \nএ ধারায় বলা হয়েছে যে,রেজিষ্ট্রেশন সার্টিফিকেট,ফিটনেস সার্টিফিকেট, রুট পারমিট (যে সকল যানবাহনের ক্ষেত্রে প্রযোজন্য) না থাকিলে, ফিটনেস সার্টিফিকেট অথবা রুট পারমিটের মেয়াদ শেষ হইলে,রুট পারমিটের শর্ত অমান্য করিলে, সিএনজি চালিত অটোরিকসা,ট্যাক্সিক্যাব এর চালক গন্তব্যস্থলে যাত্রী বহনে অস্বীকার করিলে,অনটেষ্ট, এপ্লাইড রেজিষ্টেশন(এ এফ আর),ড্রাইবার ব্যতিত আট আসন বিশিষ্ট গাড়ীর রুট পারটিম না থাকিলে, গ্যারেজ নাম্বার দিয়ে গাড়ী চালাইলে-এ ধরণের প্রতিটি অপরাধের জন্য পৃথক পৃথক ভাবে ৭০০/-টাকা মাত্র জরিমানা করার বিধান আছে এবং হয়ে থাকে।
    </string>
    <string name="dhara10">
        <font fgcolor="#FF9800">ধারা-১৫৩</font> \nএ ধারায় বলা হয়েছে যে,লাইসেন্স ব্যতিত কিংবা প্রবিধান লংঘণ পূর্বক গাড়ীতে এজেন্ট বা ক্যানভাসার নিয়োজিত থাকিলে-জরিমানা হবে ১৫০/-টাকা মাত্র ।
    </string>
    <string name="dhara11">
        <font fgcolor="#FF9800">ধারা-১৫৪</font> \nযানবাহনের ওজন, মালসহ ওজন, নির্ধারিত ওজনের চেয়ে অতিরিক্ত থাকিলে-জরিমানা হবে ৫০০/-টাকা মাত্র ।
    </string>
    <string name="dhara12">
        <font fgcolor="#FF9800">ধারা-১৫৫</font> \nএ ধারায় বলা হয়েছে যে,ইন্সুরেন্স সার্টিফিকেট না থাকিলে, ইন্সুরেন্স সার্টিফিকেটে মেয়াদ শেষ হইলে-জরিমানা হবে ৫০০/-টাকা মাত্র ।
    </string>
    <string name="dhara13">
        <font fgcolor="#FF9800"> ধারা-১৫৬</font> \nমটরযান কিংবা আইনানুগ কর্তৃপক্ষের অনুমতি ব্যতিত সংশ্লিষ্ট মটরগাড়ী চালাইয়া বাহিলে নিয়া গেলে-জরিমানা হবে ৫০০/-টাকা মাত্র ।
    </string>
    <string name="dhara14">
        <font fgcolor="#FF9800"> ধারা-১৫৭</font> \nএ ধারায় বলা হয়েছে যে,গাড়ী দাঁড় করাইয়া অন্যান্য যানবাহন চলাচলে বাঁধা সৃষ্টি করিলে, নষ্ট গাড়ী মেরামত করত: অন্য যানবাহন চলাচলে বাঁধা সৃষ্টি করিলে, যাত্রী উঠানামা করাইয়া রাস্তায় প্রতিবন্ধকতা সৃষ্টি করিলে,রং পার্কিং করিয়ারাস্তায়/ফুটপাতে প্রতিবন্ধকতা সৃষ্টি করিলে-জরিমানা হবে ২৫০/-টাকা মাত্র|
    </string>
    <string name="dhara15">
        <font fgcolor="#FF9800"> ধারা-১৫৮</font> \nএ ধারায় বলা হয়েছে যে,গাড়ীর স্পীড গভর্ণর সীল না থাকিলে, সিএনজি চালিত অটোরিকসা এবং ট্যাক্সিক্যাবের মিটার সেলের উপর অন্যায় হস্তক্ষেপ করিলে অর্থাৎ ঘষামাঝা ও টেম্পারিং করিলে-জরিমানা হবে ২৫০/-টাকা মাত্র ।তাছাড়া লেন অমান্য অথবা লালবাতির সংকেত অমান্য করিলে ৫০০/-টাকা জরিমানা ছাড়াও ধারা-১৩৭, ১৩৯, ১৫০ ব্যাতিত অন্যান্য সকল ধারা মোতাবেক দায়িত্বপালনকারী হলুদ জ্যাকেট পরিদেয় সার্জেন্টগণ (সেয়েরা ইকো, চেকপোষ্ট এবং ইনফোসমেন্ট পেট্রোল কারে দায়িত্ব পালনকারী সার্জেন্ট) কর্তৃক দায়েরকৃত মামলার ক্ষেত্রে জরিমানার পরিমান উপরে বর্ণিত ধারায় প্রত্যেকটিতে দ্বিগুনহারে বৃদ্ধি পাবে।
    </string>
    <string name="new1">
        <font fgcolor="#FF9800"> শিক্ষাগত যোগ্যতা</font> \nআগের আইনে ড্রাইভিং লাইসেন্সের জন্য শিক্ষাগত যোগ্যতার কোনো বাধ্যবাধকতা ছিল না। নতুন আইনের খসড়ায় ড্রাইভিং লাইসেন্সপাওয়ার জন্য চালকের কমপক্ষে অষ্টম শ্রেণি পাসের শর্ত রাখা হয়েছে।

    </string>
    <string name="new2">

        <font fgcolor="#FF9800"> সহকারী হতেও শিক্ষাগত যোগ্যতা</font> \nআগের অধ্যাদেশে সহকারীদের লাইসেন্সের কথা থাকলেও তাদের শিক্ষাগত যোগ্যতার শর্ত ছিল না। নতুন আইনে চালকের সহকারীরও থাকতে হবে পঞ্চম শ্রেণি পাসের সার্টিফকেট। সহকারীহতে বাধ্যতামূলকভাবে লাইসেন্সের বিধান তো থাকছেই।


    </string>
    <string name="new3">

        <font fgcolor="#FF9800">ন্যূনতম বয়স</font> \nব্যক্তিগত গাড়ি চালনার জন্য চালকের বয়স আগের মতই অন্তত ১৮ বছর রাখা হয়েছে। তবে পেশাদার চালকদের বয়স হতে হবে কমপক্ষে ২১ বছর।


    </string>
    <string name="new4">
        <font fgcolor="#FF9800">বাড়ছে সাজা</font> \nনতুন আইনের খসড়ায় চালকের ড্রাইভিং লাইসেন্স না থাকলে অনধিক ছয় মাসের জেল বা ৫০ হাজার টাকা জরিমানা অথবা উভয় দণ্ড দেওয়া হবে।আগের আইনে এই অপরাধের জন্য তিন মাসের জেল বা ২৫ হাজার টাকা জরিমানার বিধান ছিল।


    </string>
    <string name="new5">

        <font fgcolor="#FF9800">সাজা হবে সহকারীরও</font> \nচালকের সহকারীর লাইসেন্স না থাকলে এক মাসের জেলবা ২৫ হাজার টাকা জরিমানার বিধান আছে নতুন আইনের খসড়ায়।


    </string>
    <string name="new6">

        <font fgcolor="#FF9800">নিষিদ্ধ মোবাইল ফোন</font> \nনতুন আইন পাস হলে গাড়ি চালানোর সময় মোবাইল ফোন ব্যবহার করতে পারবেন না চালক। এ আইন ভাঙলে এক মাসের কারাদণ্ড বা পাঁচ হাজার টাকা পর্যন্ত জরিমানা হতে পারে।


    </string>
    <string name="new7">
        <font fgcolor="#FF9800">বিনা পরোয়ানায় গ্রেফতার</font> \nছয় মাসের কারাদণ্ড বা ৫০ হাজার টাকা জরিমানার বিধান রয়েছে- এমন অপরাধের ক্ষেত্রে চালককে বিনা পরোয়ানায় গ্রেফতারের ক্ষমতা দেয়া হয়েছে পুলিশকে।


    </string>
    <string name="new8">

        <font fgcolor="#FF9800">বিধি অমান্যে পয়েন্ট কাটা</font> \nপ্রস্তাবিত আইনে লাইসেন্সে থাকবে মোট ১২ পয়েন্ট। বিভিন্ন বিধি অমান্যে কাটা যাবে এই পয়েন্ট। পয়েন্ট শূন্য হলে বাতিল হবে চালকের লাইসেন্স


    </string>
    <string name="new9">

        <font fgcolor="#FF9800"> দুর্ঘটনার সাজা দণ্ডবিধিতে</font> \nদুর্ঘটনার জন্য শাস্তি দেওয়া হবে দণ্ডবিধি অনুযায়ী। নরহত্যা হলে ৩০২ ধারা অনুযায়ী মৃত্যুদণ্ড। হত্যা না হলে ৩০৪ ধারা অনুযায়ী যাবজ্জীবন কারাদণ্ড হবে। বেপরোয়াভাবে গাড়ি চালিয়ে মৃত্যু ঘটালে ৩০৪ (বি) ধারা অনুযায়ী তিন বছরের কারাদণ্ড হবে।


    </string>
    <string name="license_process_title">
        <font fgcolor="#FF9800">ড্রাইভিং লাইসেন্স প্রাপ্তির প্রক্রিয়া</font></string>
</resources>